--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             justify-content: center;
             width: 100%;
             height: 100%;
+            position: relative;
         }
         .envelope {
             width: 80vw;
@@ -33,15 +34,19 @@
             height: auto;
             position: relative;
             animation: bounce 1.5s infinite;
-            z-index: 1;
+            z-index: 5;
             cursor: pointer;
             transition: opacity 0.5s ease-in-out, transform 0.8s ease-in-out;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         
         .envelope img {
             width: 100%;
+            max-height: 50vh;
             height: auto;
-            object-fit: contain;
+            display: block;
         }
 
         @keyframes bounce {
@@ -82,11 +87,9 @@
             left: 50%;
             transform: translateX(-50%);
             font-size: 5vw;
-            max-font-size: 26px;
             font-weight: bold;
             color: red;
             font-family: 'Shadows Into Light', cursive;
-            display: flex;
             animation: textJump 1.5s infinite;
         }
 
@@ -108,25 +111,6 @@
             overflow: hidden;
             text-align: center;
         }
-
-        .heart {
-            position: absolute;
-            width: 6vw;
-            height: auto;
-            top: -50px;
-            opacity: 1;
-            animation: dropDown 4s ease-in-out forwards;
-        }
-
-        .heart img {
-            width: 100%;
-            height: auto;
-        }
-
-        @keyframes dropDown {
-            0% { transform: translateY(-100%); opacity: 1; }
-            100% { transform: translateY(100vh); opacity: 0; }
-        }
     </style>
     <script>
         function openEnvelope() {
@@ -136,23 +120,7 @@
             setTimeout(() => {
                 envelope.style.display = 'none';
                 newContent.style.display = 'flex';
-                createHearts();
             }, 1000);
-        }
-
-        function createHearts() {
-            for (let i = 0; i < 50; i++) {
-                let heart = document.createElement('div');
-                heart.classList.add('heart');
-                heart.style.left = Math.random() * 100 + 'vw';
-                heart.style.top = '-50px';
-                heart.style.animationDuration = (Math.random() * 2 + 3) + 's';
-                let img = document.createElement('img');
-                img.src = Math.random() > 0.5 ? 'heart1.png' : 'heart2.png';
-                heart.appendChild(img);
-                document.querySelector('.hidden-content').appendChild(heart);
-                setTimeout(() => { heart.remove(); }, 5000);
-            }
         }
     </script>
 </head>
