--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: rgba(255, 0, 0, 0.2); /* Debugging background */
+            border: 2px solid red; /* Debugging border */
         }
         
         .envelope img {
