--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="click-text">CLICK ME!! :3</div>
         <div class="envelope" onclick="openEnvelope()">
-            <img src="envelope.png" alt="Envelope">
+            <img src="enevelope.png" alt="Envelope">
         </div>
     </div>
     <div class="hidden-content">
