--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: rgba(255, 0, 0, 0.2); /* Debugging background */
-            border: 2px solid red; /* Debugging border */
         }
         
         .envelope img {
@@ -133,7 +131,7 @@
         </div>
         <div class="click-text">CLICK ME!! :3</div>
         <div class="envelope" onclick="openEnvelope()">
-            <img src="enevelope.png" alt="Envelope">
+            <img src="envelope.png" alt="Envelope">
         </div>
     </div>
     <div class="hidden-content">
