--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             width: 100%;
             height: 100%;
         }
-        .envelope {
+        .enevelope {
             width: 80vw;
             max-width: 400px;
             height: auto;
@@ -38,7 +38,7 @@
             transition: opacity 0.5s ease-in-out, transform 0.8s ease-in-out;
         }
         
-        .envelope img {
+        .enevelope img {
             width: 100%;
             height: auto;
             object-fit: contain;
@@ -129,12 +129,12 @@
         }
     </style>
     <script>
-        function openEnvelope() {
-            let envelope = document.querySelector('.content');
+        function openenevelope() {
+            let enevelope = document.querySelector('.content');
             let newContent = document.querySelector('.hidden-content');
-            envelope.style.animation = 'poof 1s forwards';
+            enevelope.style.animation = 'poof 1s forwards';
             setTimeout(() => {
-                envelope.style.display = 'none';
+                enevelope.style.display = 'none';
                 newContent.style.display = 'flex';
                 createHearts();
             }, 1000);
@@ -162,8 +162,8 @@
             <img src="arrow.png" alt="Arrow">
         </div>
         <div class="click-text">CLICK ME!! :3</div>
-        <div class="envelope" onclick="openEnvelope()">
-            <img src="envelope.png" alt="Envelope">
+        <div class="enevelope" onclick="openenevelope()">
+            <img src="enevelope.png" alt="enevelope">
         </div>
     </div>
     <div class="hidden-content">
