--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             width: 100%;
             height: 100%;
         }
-        .enevelope {
+        .envelope {
             width: 80vw;
             max-width: 400px;
             height: auto;
@@ -38,7 +38,7 @@
             transition: opacity 0.5s ease-in-out, transform 0.8s ease-in-out;
         }
         
-        .enevelope img {
+        .envelope img {
             width: 100%;
             height: auto;
             object-fit: contain;
@@ -81,8 +81,7 @@
             top: 18%;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 5vw;
-            max-font-size: 26px;
+            font-size: clamp(16px, 5vw, 26px);
             font-weight: bold;
             color: red;
             font-family: 'Shadows Into Light', cursive;
@@ -129,12 +128,12 @@
         }
     </style>
     <script>
-        function openenevelope() {
-            let enevelope = document.querySelector('.content');
+        function openEnvelope() {
+            let envelope = document.querySelector('.content');
             let newContent = document.querySelector('.hidden-content');
-            enevelope.style.animation = 'poof 1s forwards';
+            envelope.style.animation = 'poof 1s forwards';
             setTimeout(() => {
-                enevelope.style.display = 'none';
+                envelope.style.display = 'none';
                 newContent.style.display = 'flex';
                 createHearts();
             }, 1000);
@@ -151,7 +150,7 @@
                 img.src = Math.random() > 0.5 ? 'heart1.png' : 'heart2.png';
                 heart.appendChild(img);
                 document.querySelector('.hidden-content').appendChild(heart);
-                setTimeout(() => { heart.remove(); }, 5000);
+                heart.addEventListener('animationend', () => heart.remove());
             }
         }
     </script>
@@ -162,8 +161,8 @@
             <img src="arrow.png" alt="Arrow">
         </div>
         <div class="click-text">CLICK ME!! :3</div>
-        <div class="enevelope" onclick="openenevelope()">
-            <img src="enevelope.png" alt="enevelope">
+        <div class="envelope" onclick="openEnvelope()">
+            <img src="envelope.png" alt="Envelope">
         </div>
     </div>
     <div class="hidden-content">
