--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Valentine's Surprise</title>
+    <title>srnaaa</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
@@ -140,10 +140,10 @@
         <div class="valentine-text">
             <div>HAPPYYY VALENTINES</div>
             <div>SRNAAA</div>
-            <div>MY LOVEEE ❤️</div>
+            <div>MY LOVEEE </div>
         </div>
         <div class="counter-container">
-            <div>Wanna know how much time we spent together?</div>
+            <div>Wanna know our time together, loki click to find out?</div>
             <button class="counter-button" onclick="startCounter()">Time Together</button>
             <div id="time-counter"></div>
         </div>
