--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div>MY LOVEEE </div>
         </div>
         <div class="counter-container">
-            <div>Wanna know our time together, loki click to find out?</div>
+            <div>Wanna know our time together?, loki click to find out</div>
             <button class="counter-button" onclick="startCounter()">Time Together</button>
             <div id="time-counter"></div>
         </div>
