--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
         <div class="valentine-text">
             <div>HAPPYYY VALENTINES</div>
             <div>SRNAAA</div>
-            <div>MY LOVEEE ❤️</div>
+            <div>MY LOVEEE </div>
         </div>
         <div class="counter-container">
-            <div>Wanna know how much time we spent together?</div>
-            <button class="counter-button" onclick="startCounter()">Time Together</button>
+            <div>Wanna know our time together?</div>
+            <button class="counter-button" onclick="startCounter()">click this to find out!</button>
             <div id="time-counter"></div>
         </div>
     </div>
