--- a/index.html
+++ b/index.html
@@ -56,7 +56,16 @@
             cursor: pointer;
             transition: opacity 0.5s ease-in-out, transform 0.8s ease-in-out;
         }
-        
+
+
+
+        .top-gif {
+    position: fixed;
+    top: 50px; /* Adjust vertical position */
+    right: 50px; /* Adjust horizontal position */
+    width: 200px; /* Adjust size */
+    z-index: 1; /* Bring it to the front */
+}
         .envelope img {
             width: 100%;
             height: auto;
